# opengl

./: .gitignore  CMakeLists.txt
include/glad/: glad.c  glad.h
include/glm/gtx/: transform.hpp
lib/eigen-3.4.0/: CMakeLists.txt
shaders/: vertex.txt
src/: config.cpp  config.h  glad.c  linear.cpp  linear.h  main.cpp  opengl.code-workspace  triangle_mesh.cpp
src/components/: angle_axis_component.h  camera_component.h  light_component.h  mesh_vector_component.h  physics_component.h  render_component.h  transform_component.h
src/controller/: app.cpp  app.h
src/factories/: cube.cpp  cube.h  factory.cpp  factory.h  octahedron.cpp  octahedron.h  sphere.cpp  sphere.h
src/gltf/: gltf_mesh.cpp  gltf_mesh.h
src/include/glad/: glad.h
src/physics/: rigidbody.cpp  rigidbody.h  softbody.cpp  softbody.h
src/shaders/: fragment.txt  light_dst.fs  light_dst.vs  light_src.vs  vertex.txt
src/systems/: camera_system.cpp  camera_system.h  motion_system.cpp  motion_system.h  render_system.cpp  render_system.h
src/view/: shader.cpp  shader.h
